<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.ConfirmOrderActivity">




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableStart="@drawable/ic_back_white"
        android:background="@color/black"
        android:text="@string/confirm_order"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:paddingHorizontal="32dp"
        android:fontFamily="@font/helveticanowtext_medium"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/wilaya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/wilaya"
        android:inputType="text" />


    <EditText
        android:id="@+id/commune"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/commune"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/adress"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:id="@+id/typeOfShippment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/type_of_shippment"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        android:layout_marginBottom="16dp"
        android:gravity="top"
        />
    </LinearLayout>

</ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ConfirmBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm_order"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/helveticanowtext_medium"
        android:textAllCaps="false"
        android:background="@drawable/bc_sign_up_button"
        android:layout_marginBottom="16dp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/black"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>




</LinearLayout>