<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/helveticanowtext_regular"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/helveticanowtext_regular"
        android:text="@string/hi_welcome_back_you_ve_been_missed"
        android:textAlignment="center"
        android:textColor="@color/gray600"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/akli_gray"
        android:padding="8dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/bck_sigin_input"
        android:drawableEnd="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:minHeight="48dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            android:ems="10"
            android:textColorHint="@color/black"
            android:hint="@string/password"
            android:background="@drawable/bck_sigin_input"
            android:inputType="textPassword"
            android:minHeight="48dp"/>

    </com.google.android.material.textfield.TextInputLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="44dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/helveticanowtext_medium"
        android:textAllCaps="false"
        android:background="@drawable/bck_butt_sing"
        android:layout_marginTop="50dp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/black"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="16sp"
            android:fontFamily="@font/helveticanowtext_regular"
            android:textColor="@color/black"
            android:layout_marginEnd="4dp"
            />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/lightBlue"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:fontFamily="@font/helveticanowtext_regular"
            android:textSize="16sp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/lightBlue"
        android:text="@string/forgotten_your_password"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:fontFamily="@font/helveticanowtext_regular"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        />

</androidx.appcompat.widget.LinearLayoutCompat>