<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white">

    <TextView
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_back"
        android:textColor="@color/black"
        android:text="@string/back"
        android:fontFamily="@font/helveticanowtext_medium"
        android:layout_gravity="start" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:foreground="@drawable/dashed_line"
                app:cardCornerRadius="24dp"
                android:elevation="8dp"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_an_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/productImage"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="24dp"
                android:ems="10"
                android:inputType="text"
                android:textColorHint="@color/akli_gray"
                android:hint="@string/name"
                android:padding="8dp"
                android:minHeight="48dp"
                android:background="@drawable/bck_sigin_input"
                android:drawableStart="@drawable/ic_pencil"
                android:drawablePadding="8dp"/>

            <EditText
                android:id="@+id/productPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColorHint="@color/akli_gray"
                android:hint="@string/price"
                android:minHeight="48dp"
                android:padding="8dp"
                android:background="@drawable/bck_sigin_input"
                android:drawableStart="@drawable/ic_money"
                android:drawablePadding="8dp"/>

            <EditText
                android:id="@+id/productDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:padding="8dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textColorHint="@color/akli_gray"
                android:hint="@string/description"
                android:background="@drawable/bck_sigin_input"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:minHeight="48dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:text="@string/product_type"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:textSize="16sp"/>

                <Spinner
                    android:id="@+id/productType"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/UpdateProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/bck_butt_sing"
        android:fontFamily="@font/helveticanowtext_medium"
        android:text="@string/update_product"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/black"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/DeleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/butt_resend_email"
        android:fontFamily="@font/helveticanowtext_medium"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="38dp"
        />

</androidx.appcompat.widget.LinearLayoutCompat>